--- a/Webb/index.html
+++ b/Webb/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -21,26 +23,40 @@
             </ul>
         </div>
     </nav>
-    <div>
-        Lorem Ipsum "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no
-        one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum dolor
-        sit amet, consectetur adipiscing elit. Quisque mollis varius tristique. Donec euismod, felis sed tincidunt lobortis,
-        urna enim viverra elit, quis bibendum dui ex ut nisi. Morbi auctor cursus sapien, id tincidunt augue. Praesent quis
-        molestie dolor. Proin ac quam lorem. Nulla feugiat congue felis sit amet mollis. Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nam cursus justo gravida lectus fringilla feugiat. Proin leo eros, tempor in dignissim id, vestibulum
-        eget arcu. Pellentesque consectetur velit orci, non ullamcorper risus malesuada a. Quisque sit amet elementum justo.
-        Donec non metus venenatis, consectetur risus eu, tincidunt erat. Nam ac convallis tortor. In non leo quis urna pulvinar
-        imperdiet eu a sapien. Morbi eget ex tellus. Duis sit amet nisl sed lorem euismod pulvinar eu vel lorem. Pellentesque
-        ornare vel libero eget lobortis. Maecenas ultrices turpis ut mi euismod ultricies. Integer interdum tortor ligula,
-        non pharetra ante auctor vel. Suspendisse semper metus ac dolor dapibus, eu congue tortor accumsan. Sed enim tellus,
-        fermentum quis tortor non, blandit laoreet eros. Sed maximus metus orci, consectetur ultricies mauris dignissim sed.
-        Duis posuere augue quis congue volutpat. Morbi purus metus, malesuada et urna sed, volutpat commodo ex. Suspendisse
-        id elit maximus, varius est ac, ornare dolor. Praesent id leo lectus. Curabitur id sem augue. Praesent id fringilla
-        nulla, at pellentesque orci. Aenean blandit risus ligula, porta consectetur ante commodo in. Quisque luctus felis
-        sed neque molestie, id congue mi gravida. Sed congue erat nec erat ullamcorper commodo. Etiam vel metus diam. Mauris
-        vel tempus purus, nec finibus odio. Maecenas eget quam at tortor ullamcorper congue. Phasellus cursus tortor congue
-        libero bibendum, sed dignissim augue sollicitudin. Donec placerat elit sed tincidunt condimentum. Integer venenatis
-        eleifend ligula ac tempus.
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 side">Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick
+            tri-tip tail sirloin pork chop. Kielbasa turducken turkey cow shoulder pig prosciutto hamburger corned beef short
+            loin, meatloaf tri-tip drumstick. Shankle sirloin ground round fatback, cow pancetta boudin t-bone pig. Ham short
+            ribs cow tri-tip ribeye beef ribs boudin. Short ribs pork belly leberkas salami chuck, pork loin ball tip tenderloin
+            turkey chicken pork chop filet mignon biltong. Heisenberg Ipsum</div>
+        <div class="col-sm-6">
+            Lorem Ipsum "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no
+            one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Quisque mollis varius tristique. Donec euismod, felis sed tincidunt
+            lobortis, urna enim viverra elit, quis bibendum dui ex ut nisi. Morbi auctor cursus sapien, id tincidunt augue.
+            Praesent quis molestie dolor. Proin ac quam lorem. Nulla feugiat congue felis sit amet mollis. Lorem ipsum dolor
+            sit amet, consectetur adipiscing elit. Nam cursus justo gravida lectus fringilla feugiat. Proin leo eros, tempor
+            in dignissim id, vestibulum eget arcu. Pellentesque consectetur velit orci, non ullamcorper risus malesuada a.
+            Quisque sit amet elementum justo. Donec non metus venenatis, consectetur risus eu, tincidunt erat. Nam ac convallis
+            tortor. In non leo quis urna pulvinar imperdiet eu a sapien. Morbi eget ex tellus. Duis sit amet nisl sed lorem
+            euismod pulvinar eu vel lorem. Pellentesque ornare vel libero eget lobortis. Maecenas ultrices turpis ut mi euismod
+            ultricies. Integer interdum tortor ligula, non pharetra ante auctor vel. Suspendisse semper metus ac dolor dapibus,
+            eu congue tortor accumsan. Sed enim tellus, fermentum quis tortor non, blandit laoreet eros. Sed maximus metus
+            orci, consectetur ultricies mauris dignissim sed. Duis posuere augue quis congue volutpat. Morbi purus metus,
+            malesuada et urna sed, volutpat commodo ex. Suspendisse id elit maximus, varius est ac, ornare dolor. Praesent
+            id leo lectus. Curabitur id sem augue. Praesent id fringilla nulla, at pellentesque orci. Aenean blandit risus
+            ligula, porta consectetur ante commodo in. Quisque luctus felis sed neque molestie, id congue mi gravida. Sed
+            congue erat nec erat ullamcorper commodo. Etiam vel metus diam. Mauris vel tempus purus, nec finibus odio. Maecenas
+            eget quam at tortor ullamcorper congue. Phasellus cursus tortor congue libero bibendum, sed dignissim augue sollicitudin.
+            Donec placerat elit sed tincidunt condimentum. Integer venenatis eleifend ligula ac tempus.
+        </div>
+        <div class="col-sm-3 side">Disrupt jean shorts viral hella meh, plaid cupidatat magna art party. Echo Park adipisicing literally narwhal. Williamsburg
+            leggings church-key, craft beer forage cornhole jean shorts blue bottle pariatur. Officia sapiente bespoke, locavore
+            plaid cray voluptate deep v ex vinyl tote bag chillwave swag occaecat. Sed banh mi 3 wolf moon single-origin
+            coffee quis tempor. Hoodie pitchfork pork belly aliqua, shabby chic elit consequat freegan ethical try-hard mixtape.
+            Schlitz banjo deep v ullamco blog, umami nulla sint elit skateboard Godard odio.</div>
+    </div>
     </div>
     <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
         <div class="modal-dialog">
@@ -59,5 +75,7 @@
             </div>
         </div>
     </div>
+    <footer>Made by da_scrummerz &copy;</footer>
 </body>
+
 </html>
