--- a/Webb/index.html
+++ b/Webb/index.html
@@ -48,13 +48,9 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-3 side">Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick
-        tri-tip tail sirloin pork chop. Kielbasa turducken turkey cow shoulder pig prosciutto hamburger corned beef short
-        loin, meatloaf tri-tip drumstick. Shankle sirloin ground round fatback, cow pancetta boudin t-bone pig. Ham short
-        ribs cow tri-tip ribeye beef ribs boudin. Short ribs pork belly leberkas salami chuck, pork loin ball tip tenderloin
-        turkey chicken pork chop filet mignon biltong. Heisenberg Ipsum</div>
+      <div class="col-sm-3 side"></div>
       <div class="col-sm-6">
-        Lorem Ipsum "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no
+        <h1>Lorem Ipsum</h1> "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no
         one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Quisque mollis varius tristique. Donec euismod, felis sed tincidunt lobortis,
         urna enim viverra elit, quis bibendum dui ex ut nisi. Morbi auctor cursus sapien, id tincidunt augue. Praesent quis
@@ -74,11 +70,7 @@
         libero bibendum, sed dignissim augue sollicitudin. Donec placerat elit sed tincidunt condimentum. Integer venenatis
         eleifend ligula ac tempus.
       </div>
-      <div class="col-sm-3 side">Disrupt jean shorts viral hella meh, plaid cupidatat magna art party. Echo Park adipisicing literally narwhal. Williamsburg
-        leggings church-key, craft beer forage cornhole jean shorts blue bottle pariatur. Officia sapiente bespoke, locavore
-        plaid cray voluptate deep v ex vinyl tote bag chillwave swag occaecat. Sed banh mi 3 wolf moon single-origin coffee
-        quis tempor. Hoodie pitchfork pork belly aliqua, shabby chic elit consequat freegan ethical try-hard mixtape. Schlitz
-        banjo deep v ullamco blog, umami nulla sint elit skateboard Godard odio.</div>
+      <div class="col-sm-3 side"></div>
     </div>
   </div>
 
@@ -95,11 +87,6 @@
         <div class="login-help">
           <a onclick="document.getElementById('login-modal').style.display='none'" data-toggle="modal" data-target="#password-modal">Glömt lösenord?</a>
         </div>
-        <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
-            <pre><code id="quickstart-account-details">null</code></pre>
-          </div>
       </div>
     </div>
   </div>
