--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>
   <script src="/__/firebase/init.js"></script>
 
   <script type="text/javascript" src="js/loggedin.js"></script>
@@ -35,5 +36,6 @@
             <div>Firebase auth <code>currentUser</code> object value:</div>
             <pre><code id="quickstart-account-details">null</code></pre>
           </div>
+          <h3 id="data">firebase</h3>
 </body>
 </html>
