--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>
@@ -37,5 +38,13 @@
             <pre><code id="quickstart-account-details">null</code></pre>
           </div>
           <h3 id="data">firebase</h3>
+          <table> 
+            <thead>
+              <tr>
+                <td></td>
+              </tr>
+              <tbody id="table"></tbody>
+            </thead>
+          </table>
 </body>
 </html>
