--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -31,7 +31,7 @@
     
     <div ng-controller="personCtrl as ctrl">
         <pre>
-        {{ctrl.object}}
+        {{data | json}}
         </pre>
     </div>
 
