--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -29,9 +29,9 @@
     <h1>Kursöversikt</h1>
     <h2>information om användaren: </h2>
 
-    <h3 id="object"></h3>
     
     <div ng-controller="personCtrl as ctrl">
+        <h2>Hello, {{firebaseUser.email}}</h2>
         <pre>
         {{data | json}}
         </pre>
