--- a/Webb/index.html
+++ b/Webb/index.html
@@ -18,18 +18,7 @@
   <script src="/__/firebase/init.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyCzIv9ECgSeBxgu_p8oJLDpzoLp4YydvEg",
-      authDomain: "scrummerz-2e3f3.firebaseapp.com",
-      databaseURL: "https://scrummerz-2e3f3.firebaseio.com",
-      projectId: "scrummerz-2e3f3",
-      storageBucket: "scrummerz-2e3f3.appspot.com",
-      messagingSenderId: "936353564933"
-    };
-    firebase.initializeApp(config);
-  </script>
+  <script type="text/javascript" src="js/database.js"></script>
 </head>
 
 <body>
