--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -42,27 +42,26 @@
         <h6>Hello, {{user.Name}}</h6>
         <h6>Din klass är {{user.Class}}</h6>
         <h6>Ditt personnummer är {{user.Pnr}}</h6>
-        <h6>{{myClass}}</h6>
-        <ul ng-repeat="course in myCourses">
-            <li>
-                {{course}}
-            </li>
-        </ul>
-       
 
-        <h3>Aktiva kurser</h3>
-        <!-- jQuery för animation? hide/show detaljer. Hur kopplas då varje <p> till <h5>? -->
-        <ul ng-repeat="course in data">
-            <li ng-show="{{course.active === true}}">
-                <h5>{{course.name}}</h5>
-                <p>{{course.details}}</p>
+        <h4>Pågående kurser</h4>
+        <ul ng-repeat="course in myCourses">
+            <li ng-show="{{course.status === 'progress'}}">
+                <h6>{{course.name}}</h6>
+                <p>{{course.description}}</p>
             </li>
         </ul>
-        <h3>Avslutade kurser</h3>
-        <ul ng-repeat="course in data">
-            <li ng-show="{{course.active === false}}">
-                <h5>{{course.name}}</h5>
-                <p>{{course.details}}</p>
+        <h4>Kommande kurser</h4>
+        <ul ng-repeat="course in myCourses">
+            <li ng-show="{{course.status === 'comming'}}">
+                <h6>{{course.name}}</h6>
+                <p>{{course.description}}</p>
+            </li>
+        </ul>
+        <h4>Avslutade kurser</h4>
+        <ul ng-repeat="course in myCourses">
+            <li ng-show="{{course.status === 'finished'}}">
+              <h6>{{course.name}}</h6>
+                <p>{{course.description}}</p>
             </li>
         </ul>
     </div>
