db path changed

--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -42,7 +42,7 @@
         <!-- ta bort -->
         <h6>Hello, {{firebaseUser.email}}</h6>
         <h6>Hello, {{user.Name}}</h6>
-        <h6>Din klass är {{user.Class}}</h6>
+        <h6>Din klass är {{user.myClass}}</h6>
         <h6>Ditt personnummer är {{user.Pnr}}</h6>
 
         <h4>Pågående kurser</h4>
