--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -28,10 +28,14 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Studentportalen</a>
+                <a class="navbar-brand" href="index.html">Studentportalen</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{user.Name}}</a></li>
+                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user "></span> {{user.Name}}<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="betyg.html">Mina betyg</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" id="quickstart-sign-in" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-out"></span> Logga ut</a></li>
             </ul>
         </div>
@@ -46,6 +50,7 @@
                     <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
                     <p><em>KURSKOD: </em><samp>{{course.courseCode}}</samp></p>
                     <p><em>LÄRARE: </em><samp>{{course.teacher}}</samp></p>
+                    <p ng-init="ctrl.init(course.courseCode)" ng-repeat="g in grade">{{g}}</p>
                 </div>
             </div>
         </div>
@@ -59,6 +64,7 @@
                     <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
                     <p><em>KURSKOD: </em><samp>{{course.courseCode}}</samp></p>
                     <p><em>LÄRARE: </em><samp>{{course.teacher}}</samp></p>
+                    <p ng-init="ctrl.init(course.courseCode)" ng-repeat="g in grade">{{g}}</p>
                 </div>
             </div>
         </div>
@@ -72,12 +78,12 @@
                     <p><em>BESKRIVNING: </em><samp>{{course.description}}</samp></p>
                     <p><em>KURSKOD: </em><samp>{{course.courseCode}}</samp></p>
                     <p><em>LÄRARE: </em><samp>{{course.teacher}}</samp></p>
+                    <p ng-init="init(course.courseCode)">{{grade.inl1}}</p>
                 </div>
             </div>
         </div>
     </div>
     </div>
-
 </body>
 
 </html>
