--- a/Webb/index.html
+++ b/Webb/index.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
   <div class="container-fluid" >
-    <div class="row">
+    <div class="row" id="front-row">
       <div class="col-sm-3 side"></div>
       <div class="col-sm-6" id="start-main">
         <h1>Välkommen till studentportalen</h1> 
